--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "firebase": "^8.10.1",
     "vue": "^3.0.0",
+    "vue-axios": "^3.4.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
